# breezetest

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  install-dev.ps1  install-dev.sh  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: verify-install.ps1  verify-install.sh
src/breezetest/: __init__.py  __main__.py
src/breezetest/actions/: assertion.py  capture.py  interaction.py  navigation.py  registry.py  script.py  wait.py
src/breezetest/browser/: config.py  manager.py
src/breezetest/cli/: main.py
src/breezetest/core/: context.py  executor.py  hooks.py  models.py  parser.py  runner.py
src/breezetest/data/: providers.py
src/breezetest/plugins/: base.py
src/breezetest/reporting/: collector.py  console.py  html_report.py  junit_xml.py
src/breezetest/reporting/templates/: report.html
templates/: breeze.yml  example_test.yml
tests/: conftest.py  test_actions.py  test_models.py  test_parser.py  test_reporting.py
tests/fixtures/: sample_suite.yml
